--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="followers">&#160;followers‧&#160;</string>
     <string name="following">&#160;following‧&#160;</string>
+    <string name="internet_is_not_connected">目前無網路連線</string>
 </resources>
